feat: complete MDX blog system with analytics, SEO & RSS
- Added MDX support with @next/mdx and remark-gfm
- Created complete blog structure with 3 sample articles:
  * The Power of Daily Inspiration
  * Finding Mindfulness Through Ancient Wisdom
  * Building Resilience with Motivational Quotes
- Implemented custom MDX components for enhanced styling
- Added comprehensive analytics tracking with Google Analytics
- Created RSS feed for blog posts
- Enhanced SEO with sitemap and robots.txt
- Added tracking for quote views and social shares
- Integrated blog link in main page
- Updated environment variables for analytics

--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/mdx": "^15.4.6",
+    "@types/mdx": "^2.0.13",
     "@vercel/og": "^0.8.5",
     "next": "15.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
